# selfevolvingagents

./: .env.example  .gitignore  README-elevenlabs-braintrust.md  README.md  agents.md  custom_metrics.py  hack-details.txt  hackathon-architectures.md  package-lock.json  package.json  phases.md  pyproject.toml  requirements.txt  setup.md  skills-lock.json
agent_eval/: autotune_service.py  custom_metrics.py  gemini_trace_strategy.py  run.py  run_train_test.py  strategy_proposer.py
configs/: prompt_rounds.json
data/kaggle_911/: disaster_weather_filenames.txt  disaster_weather_filenames_additional.txt  disaster_weather_filenames_expanded.txt  disaster_weather_matches.csv  disaster_weather_matches_expanded.csv  disaster_weather_matches_strict.csv  disaster_weather_transcripts_additional_elevenlabs.csv  disaster_weather_transcripts_all_combined.csv  disaster_weather_transcripts_all_elevenlabs.csv  disaster_weather_transcripts_elevenlabs.csv  disaster_weather_transcripts_weather_only.csv  selected_transcript_files.txt
datasets/: dataset_language_prompt_variants.jsonl  dataset_test.jsonl  dataset_train.jsonl
reports/: gemini_strategy_r4.md  next_round_strategy.md  strategy_report_r4.md  strategy_report_r4_rich.md
scripts/: build_selected_transcript_datasets.py  expand_weather_transcripts_to_target.py  expand_weather_transcripts_with_whisper.py  generate_split_from_new_traces.py  run_server_and_worker.sh  transcribe_strict_elevenlabs.py  voice_agent_eval_elevenlabs.py
src/app/: globals.css  layout.tsx  page.tsx
src/components/: voice-agent-card.tsx
(+15 files in other folders)
